--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -109,7 +109,7 @@ a:hover {
    font-family: "Hind Siliguri", sans-serif;
    font-size: 18px;
    box-shadow: 0px 5px 15px -5px rgb(0 0 0 / 78%);
-   background: transparent linear-gradient(110deg, #3fad07 0%, #DE0655 100%) 0% 0% no-repeat padding-box;
+   background: #0d6efd !important;
 }
 
 .btn:hover {
