--- a/public/frontend/assets/css/tools.css
+++ b/public/frontend/assets/css/tools.css
@@ -106,3 +106,46 @@
    box-shadow: 0 8px 20px rgba(255, 75, 43, 0.4);
    transform: scale(1.05);
 }
+
+h3.lengthText {
+   font-size: 20px;
+   /* text-align: left; */
+   font-weight: bold;
+}
+
+.lenthDis {
+   background: blue;
+   padding: 5px 12px;
+   border-radius: 50px;
+   color: #fff;
+}
+.form-check {
+   margin-right: 20px;
+}
+.form-check-input {
+   width: 24px;
+   height: 24px;
+   margin-top: 2px;
+   vertical-align: top;
+   background-color: #fff;
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: contain;
+   -webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none;
+   margin-right: 5px;
+   border: 1px solid;
+   color-adjust: exact;
+   border: 1px solid #C5D6E0 !important;
+   box-shadow: 0px 2px 4px 0px rgba(7, 29, 43, 0.12) inset;
+}
+
+label.form-check-label {
+   font-size: 18px;
+   font-weight: 500;
+}
+.charecor {
+   font-size: 18px;
+   margin: 10px 0;
+}
