--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -1,7 +1,9 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-
+.container {
+   max-width: 1300px !important;
+}
 :root {
    --bg-primary: #124E66;
    --bg-secondary: #F42A41;
