--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -542,7 +542,7 @@ section::after {
 .navbar-mobile {
    position: fixed !important;
    overflow: hidden;
-   top: 80px;
+   top: 50px;
    right: 0;
    left: 0;
    bottom: 0;
@@ -651,8 +651,8 @@ section::after {
 }
 
 header .circle {
-   width: 30px;
-   height: 30px;
+   width: 26px;
+   height: 26px;
    position: relative;
    margin-top: 0px;
    margin-left: 10px;
@@ -692,6 +692,11 @@ header .icon.close .middle,
 }
 
 @media screen and (max-width: 991px) {
+      .header {
+            padding: 12px 0;
+            background-color: #fff;
+            box-shadow: 0px 3px 6px #0000002b;
+         }
    #wrapper {
       display: block;
       margin-left: 0px;
